--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <script type="module" crossorigin src="/assets/index.09b140f4.js"></script>
+    <link rel="stylesheet" href="/assets/index.0451a747.css">
   </head>
   <body>
     <canvas id="bg"></canvas>
@@ -20,6 +22,6 @@
     </main>
 
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    
   </body>
 </html>
